	* bzero->memset
	* Took local includes out of powerman.h (still need to do sys includes)

2002-07-27 garlick
	* Renamed main.[ch] to powermand.[ch]; renamed client.c to powerman.c.
	* Moved set_tv() from powermand.c to config.c.
	* Moved overdue() from powermand.c to device.c.
	* Moved read_Config_file() from config.c to powermand.c and exported
	  init_Client_protocol() from config.c.
	* Created get_String_from_Buffer() buffer in util.[ch] to eliminate
	  dependence of buffer.h pm_string.h.
	* Fixed Delay to account for select EINTR.
	* Created gettimeofday wrapper.
	* Fixed Read/Write to retry on EINTR and handle other errors gracefully
	* Have Free() wrapper clear memory to zero magic cookies, etc..
	* Made Buffer an opaque type with magic cookie.
	* Made String an opaque type with magic cookie.
	* Give appropriate errors when powermand config file is not set or 
	  set improperly, and start with a default config file.
	* Powermand options changed per code review.
	* Moved system includes out of powerman.h.
	* Merged general code review suggestions in to TODO file
	  (but not the specific yet)
	* Added support for quadrics style host ranges in powerman client.
	* Move powermand from bin to sbin.
	* Use standard assert instead of powerman.h one so we get killed
	  with a SIGABORT and get debugger stack traces.
	* Added some list_iterator_destroy's to match list_iterator_create's
	  in powerman.c
	* Pid file stuff moved to pidlock.c and disabled for the moment.

2002-07-28 garlick
	* Fixed bug where log fd was always being checked for writeability
	  in main select loop, chewing 100% of a CPU.
	* Commenting out the "log file" config line now disables logging.
	* Made wrapper Malloc/Free more robust (embed size/magic cookie in
	  each buffer allocated).  Size is no longer a parameter to Free.

2002-07-29 garlick
	* Make --queryon, --queryoff work with or without targets on cmd line.

2002-07-29 dun
	* Fixed parms to gethostbyaddr().