@@ -76,3 +76,6 @@
 
 2002-07-29 dun
 	* Fixed parms to gethostbyaddr().
+
+2002-08-01 garlick
+	* Do not use ${srcbin} for products.  Clean up other Makefile targets.
